fix: header overlap on mobile

--- a/src/components/codeCarousel/styles.css
+++ b/src/components/codeCarousel/styles.css
@@ -77,7 +77,7 @@
 
 @media (max-width: 576.98px) {
   .carousel {
-    padding: 20px;
+    padding: 69px 20px 20px 20px;
   }
   .window-nav {
     display: none;
